Third commit: Add new features and fixes