@@ -5,7 +5,7 @@ import com.baomidou.mybatisplus.extension.plugins.pagination.Page;
 import com.baomidou.mybatisplus.extension.service.impl.ServiceImpl;
 import com.museum.museumsystem.common.PageResult;
 import com.museum.museumsystem.entity.User;
-import com.museum.museumsystem.repository.UserRepository;
+import com.museum.museumsystem.mapper.UserMapper;
 import com.museum.museumsystem.security.UserPrincipal;
 import com.museum.museumsystem.service.UserService;
 import org.springframework.security.core.userdetails.UserDetails;
@@ -13,9 +13,8 @@ import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
 
 @Service
-public class UserServiceImpl extends ServiceImpl<UserRepository, User> implements UserService {
+public class UserServiceImpl extends ServiceImpl<UserMapper, User> implements UserService {
 
-    // ====================== 登录认证 ======================
     @Override
     public UserDetails loadUserByUsername(String username) throws UsernameNotFoundException {
         LambdaQueryWrapper<User> wrapper = new LambdaQueryWrapper<>();
@@ -29,7 +28,6 @@ public class UserServiceImpl extends ServiceImpl<UserRepository, User> implement
         return UserPrincipal.create(user);
     }
 
-    // ====================== 根据用户名查询 ======================
     @Override
     public User findByUsername(String username) {
         LambdaQueryWrapper<User> wrapper = new LambdaQueryWrapper<>();
@@ -37,7 +35,6 @@ public class UserServiceImpl extends ServiceImpl<UserRepository, User> implement
         return getOne(wrapper);
     }
 
-    // ====================== 用户名是否存在 ======================
     @Override
     public boolean existsByUsername(String username) {
         LambdaQueryWrapper<User> wrapper = new LambdaQueryWrapper<>();
@@ -45,7 +42,6 @@ public class UserServiceImpl extends ServiceImpl<UserRepository, User> implement
         return count(wrapper) > 0;
     }
 
-    // ====================== 邮箱是否存在 ======================
     @Override
     public boolean existsByEmail(String email) {
         LambdaQueryWrapper<User> wrapper = new LambdaQueryWrapper<>();
@@ -53,19 +49,17 @@ public class UserServiceImpl extends ServiceImpl<UserRepository, User> implement
         return count(wrapper) > 0;
     }
 
-    // ====================== 保存用户 ======================
     @Override
     public boolean saveUser(User user) {
         return save(user);
     }
 
-    // ====================== 分页查询 ======================
     @Override
     public PageResult<User> pageQuery(Long current, Long size, String keyword) {
         Page<User> page = new Page<>(current, size);
         LambdaQueryWrapper<User> wrapper = new LambdaQueryWrapper<>();
 
-        if (keyword != null && !keyword.isBlank()) {
+        if (keyword != null && !keyword.trim().isEmpty()) {
             wrapper.like(User::getUsername, keyword);
         }
 
